--- a/tribute_page.html
+++ b/tribute_page.html
@@ -44,7 +44,7 @@
         <script>
             $(function(){
                 var imgElement = $('.mayun-picture img');
-                console.log(imgElement)
+                console.log(imgElement);
             })
         </script>
     </body>
