--- a/tribute_page.html
+++ b/tribute_page.html
@@ -43,8 +43,8 @@
         <p style="text-align:center;font-size:14px">Written and coded by XiaoYing He in June 24, 2017.</p>
         <script>
             $(function(){
-                var imgElement = $('.mayun-picture img');
-                console.log(imgElement);
+                var imgElement2 = $('.mayun-picture img');
+                console.log(imgElement2);
             })
         </script>
     </body>
